--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,29 @@
-asgiref
-certifi
-cffi
-charset-normalizer
-crispy-bootstrap5
-cryptography
-defusedxml
-dj-database-url
-Django
-django-cors-headers
-django-crispy-forms
-django-environ
-django-filter
-django-templated-mail
-djangorestframework
-djangorestframework-simplejwt
-djoser
-environ
-gunicorn
-idna
-Markdown
-MouseInfo
-numpy
-oauthlib
-packaging
-pillow
-psycopg2-binary
-PyAutoGUI
-pycparser
-PyGetWindow
-PyJWT
-PyMsgBox
-pyperclip
-PyRect
-PyScreeze
-python3-openid
-pytweening
-requests
-requests-oauthlib
-social-auth-app-django
-social-auth-core
-sqlparse
-typing_extensions
-tzdata
-urllib3
-whitenoise
+asgiref==3.8.1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+cryptography==43.0.3
+defusedxml==0.8.0rc2
+Django==5.1.2
+django-cors-headers==4.5.0
+django-environ==0.11.2
+django-rest-framework==0.1.0
+django-templated-mail==1.1.1
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+djoser==2.2.3
+idna==3.10
+oauthlib==3.2.2
+pillow==11.0.0
+psycopg2-binary==2.9.10
+pycparser==2.22
+PyJWT==2.9.0
+python3-openid==3.2.0
+requests==2.32.3
+requests-oauthlib==2.0.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
+sqlparse==0.5.1
+tzdata==2024.2
+urllib3==2.2.3
+whitenoise==6.7.0
